tests/NormalTests/paczka1/fuzzy1/84787861.err
Error in line 2: A875 A24 30,6
Error in line 7: MLrqpLe A24 40,9
Error in line 13: NFaBcsF A248 75,0
Error in line 14: NFaBcsF A24 52,3
Error in line 23: NFaBcsF A24 180,92
Error in line 22: If7S A24 65,8
Error in line 24: If7S A248 44,8
Error in line 27: zst7RtMlW S744 10,3
Error in line 18: ArjoUgBpVif S744 11,7
